# PO_KolkoKrzyzyk_Client

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json
PO_KolkoKrzyzyk_Client/: CMakeLists.txt  PO_KolkoKrzyzyk_Client.cpp  PO_KolkoKrzyzyk_Client.h
PO_KolkoKrzyzyk_Client/cfg/: config.ini
PO_KolkoKrzyzyk_Client/include/: ConnectionManager.h  EndGameViewControl.h  GameControl.h  GameViewControl.h  HomeViewControl.h  JsonDoc.h  MainWindowControl.h  MatchmakingViewControl.h  SettingsFile.h  StartViewControl.h  TcpClient.h  WindowControl.h  WindowViews.h
PO_KolkoKrzyzyk_Client/src/: ConnectionManager.cpp  EndGameViewControl.cpp  GameControl.cpp  GameViewControl.cpp  HomeViewControl.cpp  JsonDoc.cpp  MainWindowControl.cpp  MatchmakingViewControl.cpp  SettingsFile.cpp  StartViewControl.cpp  TcpClient.cpp  WindowControl.cpp  WindowViews.cpp  main.cpp
PO_KolkoKrzyzyk_Client/ui/: PO_KolkoKrzyzyk_GUI.qrc
PO_KolkoKrzyzyk_Client/ui/content/: AboutWindow.qml  CMakeLists.txt  MainWindow.qml  SecondWindow.qml
PO_KolkoKrzyzyk_Client/ui/content/controls/: AboutButton.ui.qml  AccountButton.ui.qml  BigButton.ui.qml  CircleImage.ui.qml  CrossImage.ui.qml  CustomTextField.ui.qml  EndGameButton.ui.qml  GameControl.qml  GameLeaveButton.ui.qml  PlayButton.ui.qml  SettingsButton.ui.qml  SoundControl.ui.qml
PO_KolkoKrzyzyk_Client/ui/content/dialogs/: ExitGameDialog.qml
PO_KolkoKrzyzyk_Client/ui/content/popups/: GameInfoPopup.qml
PO_KolkoKrzyzyk_Client/ui/content/scripts/: CheckPass.js  CheckUsername.js  PanelChanger.js  ViewChanger.js
PO_KolkoKrzyzyk_Client/ui/content/sounds/: SoundsControls.qml
PO_KolkoKrzyzyk_Client/ui/content/views/: DrawPanel.ui.qml  EndGameView.qml  EndGameViewForm.ui.qml  FailPanel.ui.qml  GameView.qml  GameViewForm.ui.qml  HomeView.qml  HomeViewForm.ui.qml  LoginPanel.qml  LoginPanelForm.ui.qml  LoginView.qml  LoginViewForm.ui.qml  MatchmakingView.qml  MatchmakingViewForm.ui.qml  NewAccountPanel.qml  NewAccountPanelForm.ui.qml  PlayPanel.qml  PlayPanelForm.ui.qml  StartView.qml  StartViewForm.ui.qml  WinPanel.ui.qml
